Adjust column size to avoid player overflow on browser resize

--- a/app/javascript/components/Ramp.scss
+++ b/app/javascript/components/Ramp.scss
@@ -333,6 +333,15 @@
   }
 
   .ramp--playlist-accordion {
+    // Set accordion with to fit player's minimum width
+    min-width: 490px;
+    &.mobile-view {
+      min-width: 380px;
+    }
+
+    border-radius: 0 0 0.25em 0.25em;
+    border-top: none;
+
     .accordion .card {
       border: none;
       border-bottom: 1px solid rgba(0, 0, 0, 0.125);
